--- a/.github/workflows/deploy-aws.yml
+++ b/.github/workflows/deploy-aws.yml
@@ -30,4 +30,4 @@ jobs:
 
       - run: sam build
 
-      - run: sam deploy --config-env dev AppEnv=DEV --resolve-s3
+      - run: sam deploy --config-env dev AppEnv=DEV --resolve-s3 --stack-name lavanilla-backend-dev
