--- a/.github/workflows/deploy-aws.yml
+++ b/.github/workflows/deploy-aws.yml
@@ -30,11 +30,4 @@ jobs:
 
       - run: sam build
 
-      - run: sam deploy \
-          --config-env dev \
-          --resolve-s3 \
-          --stack-name lavanilla-backend-dev \
-          --parameter-overrides AppEnv=DEV \
-          --capabilities CAPABILITY_IAM CAPABILITY_NAMED_IAM \
-          --no-confirm-changeset \
-          --no-fail-on-empty-changeset
+      - run: sam deploy --stack-name lavanilla-backend-dev --config-env dev --resolve-s3 --capabilities CAPABILITY_IAM CAPABILITY_NAMED_IAM --parameter-overrides AppEnv=DEV --no-confirm-changeset --no-fail-on-empty-changeset
