--- a/template.yaml
+++ b/template.yaml
@@ -22,6 +22,25 @@ Globals:
       LogFormat: JSON
 
 Resources:
+  LaVanillaDraftOrderBucket:
+    Type: AWS::S3::Bucket
+    Properties:
+      BucketName: !Sub "la-vanilla-draft-order-${StageName}-${AWS::AccountId}"
+      VersioningConfiguration:
+        Status: Enabled
+      PublicAccessBlockConfiguration:
+        BlockPublicAcls: true
+        BlockPublicPolicy: true
+        IgnorePublicAcls: true
+        RestrictPublicBuckets: true
+      BucketEncryption:
+        ServerSideEncryptionConfiguration:
+          - ServerSideEncryptionByDefault:
+              SSEAlgorithm: AES256
+      Tags:
+        - Key: App
+          Value: LaVanillaApp
+
   LaVanillaApi:
     Type: AWS::Serverless::Api
     Properties:
