--- a/template.yaml
+++ b/template.yaml
@@ -76,6 +76,26 @@ Resources:
       Tags:
         App: LaVanillaApp
 
+  LaVanillaSelfQueueGraphql:
+    Type: AWS::Serverless::Function # More info about Function Resource: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction
+    Metadata:
+      BuildMethod: go1.x
+    Properties:
+      CodeUri: handlers/graphql-sq/
+      Handler: handlers/graphql-sq/bootstrap
+      Runtime: provided.al2023
+      Architectures:
+        - arm64
+      Events:
+        CatchAll:
+          Type: Api
+          Properties:
+            RestApiId: !Ref LaVanillaApi # Explicitly link to the API
+            Path: /graphql-sq
+            Method: POST
+      Tags:
+        App: LaVanillaApp
+
   LaVanillaBackOfficeGraphql:
     Type: AWS::Serverless::Function # More info about Function Resource: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction
     Metadata:
