--- a/template.yaml
+++ b/template.yaml
@@ -58,6 +58,23 @@ Resources:
       Tags:
         - Key: App
           Value: LaVanillaApp
+  CloudFrontOAI:
+    Type: AWS::CloudFront::CloudFrontOriginAccessIdentity
+    Properties:
+      CloudFrontOriginAccessIdentityConfig:
+        Comment: !Sub "OAI for ${AWS::StackName}"
+
+  BucketPolicy:
+    Type: AWS::S3::BucketPolicy
+    Properties:
+      Bucket: !Ref StaticSiteBucket
+      PolicyDocument:
+        Statement:
+          - Effect: Allow
+            Principal:
+              CanonicalUser: !GetAtt CloudFrontOAI.S3CanonicalUserId
+            Action: s3:GetObject
+            Resource: !Sub "${LaVanillaSelfServiceBucket.Arn}/*"
 
   LaVanillaApi:
     Type: AWS::Serverless::Api
