--- a/template.yaml
+++ b/template.yaml
@@ -155,6 +155,7 @@ Resources:
                 - s3:PutObject
                 - s3:GetObject
                 - s3:DeleteObject
+                - s3:ListBucket
               Resource: !Sub "${LaVanillaSelfServiceBucket.Arn}/*"
       Tags:
         App: LaVanillaApp
