--- a/template.yaml
+++ b/template.yaml
@@ -155,8 +155,11 @@ Resources:
                 - s3:PutObject
                 - s3:GetObject
                 - s3:DeleteObject
-                - s3:ListBucket
               Resource: !Sub "${LaVanillaSelfServiceBucket.Arn}/*"
+            - Effect: Allow
+              Action:
+                - s3:ListBucket
+              Resource: !GetAtt LaVanillaSelfServiceBucket.Arn
       Tags:
         App: LaVanillaApp
 
