--- a/.github/workflows/deploy-aws.yml
+++ b/.github/workflows/deploy-aws.yml
@@ -26,6 +26,6 @@ jobs:
         run: |
           pip install aws-sam-cli
 
-      - run: sam build
+      - run: sam build --use-container
 
       - run: sam deploy --stack-name lavanilla-backend-dev --config-env dev --resolve-s3 --capabilities CAPABILITY_IAM CAPABILITY_NAMED_IAM --parameter-overrides AppEnv=DEV --no-confirm-changeset --no-fail-on-empty-changeset
