--- a/.github/workflows/deploy-aws.yml
+++ b/.github/workflows/deploy-aws.yml
@@ -17,6 +17,14 @@ jobs:
       - name: Checkout source code
         uses: actions/checkout@v4
 
+      - name: Cache Go modules
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/.cache/go-build
+            ~/go/pkg/mod
+          key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
+
       - name: Set up Go
         uses: actions/setup-go@v5
         with:
@@ -26,6 +34,6 @@ jobs:
         run: |
           pip install aws-sam-cli
 
-      - run: sam build --use-container
+      - run: sam build
 
       - run: sam deploy --stack-name lavanilla-backend-dev --config-env dev --resolve-s3 --capabilities CAPABILITY_IAM CAPABILITY_NAMED_IAM --parameter-overrides AppEnv=DEV --no-confirm-changeset --no-fail-on-empty-changeset
