add designer start

--- a/template.yaml
+++ b/template.yaml
@@ -136,7 +136,7 @@ Resources:
   LaVanillaSelfServiceGraphql:
     Type: AWS::Serverless::Function # More info about Function Resource: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction
     Metadata:
-      BuildMethod: none
+      BuildMethod: go1.x
     Properties:
       CodeUri: handlers/graphql-ss/
       Handler: bootstrap
@@ -163,7 +163,7 @@ Resources:
   LaVanillaSelfQueueGraphql:
     Type: AWS::Serverless::Function # More info about Function Resource: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction
     Metadata:
-      BuildMethod: none
+      BuildMethod: go1.x
     Properties:
       CodeUri: handlers/graphql-sq/
       Handler: bootstrap
@@ -197,7 +197,7 @@ Resources:
   LaVanillaBackOfficeGraphql:
     Type: AWS::Serverless::Function # More info about Function Resource: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction
     Metadata:
-      BuildMethod: none
+      BuildMethod: go1.x
     Properties:
       CodeUri: handlers/graphql-backoffice/
       Handler: bootstrap
