--- a/.github/workflows/deploy-aws.yml
+++ b/.github/workflows/deploy-aws.yml
@@ -30,14 +30,14 @@ jobs:
         with:
           go-version-file: go.mod
 
-      - name: Build Go Lambdas
-        run: |
-          for func in graphql-ss graphql-sq graphql-backoffice; do
-            echo "Building $func..."
-            cd handlers/$func
-            GOOS=linux GOARCH=arm64 go build -o bootstrap main.go
-            cd ../../
-          done
+#      - name: Build Go Lambdas
+#        run: |
+#          for func in graphql-ss graphql-sq graphql-backoffice; do
+#            echo "Building $func..."
+#            cd handlers/$func
+#            GOOS=linux GOARCH=arm64 go build -o bootstrap main.go
+#            cd ../../
+#          done
 
       - name: Install AWS SAM CLI
         run: |
