--- a/template.yaml
+++ b/template.yaml
@@ -191,8 +191,8 @@ Resources:
       Tags:
         App: LaVanillaApp
 
-  LaVanillaSelfQueueGraphql:
-    Type: AWS::Serverless::Function # More info about Function Resource: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction
+  SelfQueueGraphql:
+    Type: AWS::Serverless::Function
     Metadata:
       BuildMethod: go1.x
     Properties:
