--- a/template.yaml
+++ b/template.yaml
@@ -159,13 +159,13 @@ Resources:
   # CloudWatch Log Groups with retention policy
   SelfServiceGraphqlLogGroup:
     Type: AWS::Logs::LogGroup
-    DeletionPolicy: Retain
+    DeletionPolicy: Delete
     Properties:
       LogGroupName: !Sub "/aws/lambda/${SelfServiceGraphql}"
       RetentionInDays: 7
   SelfQueueGraphqlLogGroup:
     Type: AWS::Logs::LogGroup
-    DeletionPolicy: Retain
+    DeletionPolicy: Delete
     Properties:
       LogGroupName: !Sub "/aws/lambda/${SelfQueueGraphql}"
       RetentionInDays: 7
