--- a/template.yaml
+++ b/template.yaml
@@ -23,7 +23,7 @@ Globals:
       LogGroup: !Sub "/aws/lambda/lavanilla-backend-${StageName}"
 
 Resources:
-  LaVanillaTempBucket:
+  TempBucket:
     Type: AWS::S3::Bucket
     Properties:
       BucketName: !Sub "la-vanilla-temp-${StageName}"
@@ -260,7 +260,7 @@ Resources:
               Resource:
                 - !Sub "${LaVanillaDraftOrderBucket.Arn}/*"
                 - !Sub "${LaVanillaSelfServiceBucket.Arn}/*"
-                - !Sub "${LaVanillaTempBucket.Arn}/*"
+                - !Sub "${TempBucket.Arn}/*"
             - Effect: Allow
               Action:
                 - s3:ListBucket
